7th commit to master

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ jdk:
 
 cache:
  directories:
-  - "$HOME/.cache"
+ - "$HOME/.cache"
 jobs:
- stage: deploy
-  name: 'Deploye to Dev Environment'
-   script:
-    - mvn clean install
-    - cp .travis.settings.xml $HOME/.m2/settings.xml
-    - mvn deploy -DmuleDeploy -Dserver=$server -Dworkers=$workers -DworkerType=$workerType -Denvironment=$environment -DmuleVersion=$muleVersion -DappName=$appName
-   if: branch = dev
+    - stage: deploy
+      name: 'Deploye to Dev Environment'
+      script:
+        - mvn clean install
+        - cp .travis.settings.xml $HOME/.m2/settings.xml
+        - mvn deploy -DmuleDeploy -Dserver=$server -Dworkers=$workers -DworkerType=$workerType -Denvironment=$environment -DmuleVersion=$muleVersion -DappName=$appName
+if: branch = dev
